
5.2b1 -> 5.3a1
    - jbj: rpmdb: remap rpmdbCount -> dbiCount, eliminate dbiIndexSet usage.
    - jbj: rpmdb: fix: rpmmiCount() -> dbiCCount() with early dbcOpen().
    - jbj: rpmmi: eliminate mi->mi_filenum & rpmmiFilenum(), join keysi
	are history.
    - jbj: rpmmi: add mi->mi_count preparing to bulldoze struct _dbiIndexItem.
    - jbj: rpmdb: eliminate --initdb and --verifydb, lazy creation and db_verify
	are preferred.
    - jbj: rpmdb: eliminate dead code associated with database indices.
    - jbj: rpmdb: add assertions before always using secondary indices.
    - jbj: rpmdb: change from a CDB to ACID database behahvior.
    - jbj: rpmdb: eliminate the custom Basenames retrieval code.
    - jbj: rpmdb: eliminate the Basenames index.
    - jbj: rpmdb: abandon RPMTAG_BASENAMES lookup, use RPMTAG_FILEPATHS instead.
    - jbj: rpmts: stub-in a grandparent transaction.
    - jbj: poptDB: wire up --rpmtxndebug, collect other rpmdb debugging options.
    - jbj: rpmte: stub-in a parent transaction.
    - jbj: rpmtxn: add a parent transaction argument.
    - jbj: rpmtxn: add abstract typedef and drill throughout the API.
    - jbj: rpmtxn: expose the existing rpmtxn API for refactoring work.
    - jbj/glen: strip possible chroot prefix from db opened paths in
	Open(2) wrapper. LP#347749
    - jbj: dbi: tear out the rpmdb->db_rebuilding construction scaffholding.
	DB->associate() cascaded callbacks to generate bulk secondary index key
	stores are now functional with --rebuilddb.
    - jbj: add uniqification filtering for argv/uint32_t/uint64_t secondary keys.
	DB_DUPSORT can likely be free;y applied as a schema qualifier.
    - jbj: dbi: add currently existing secondary key filtering and transforms
	through the DB->associate() callback.
    - jbj: dbi: Backout the PRCO EVR/F tables, the PRCO assertion tables won't need no
	steenkin' joins.
    - jbj: dbi: add tables for PRCO dependency assertions based on YAML spewage.
	rude & crude but "works".