@@ -698,7 +698,6 @@ int dbiPget(dbiIndex dbi, /*@null@*/ DBC * dbcursor,
 {
     rpmop sw = (rpmop)dbiStatsAccumulator(dbi, 14);	/* RPMTS_OP_DBGET */
     int rc;
-    assert((flags == DB_NEXT) || (key->data != NULL && key->size > 0));
     (void) rpmswEnter(sw, 0);
     rc = (dbi->dbi_vec->cpget) (dbi, dbcursor, key, pkey, data, flags);
     (void) rpmswExit(sw, data->size);
