@@ -1,5 +1,7 @@
 
 5.2b1 -> 5.3a1
+    - jbj: rpmdb: begin phasing out RPMDBI_LABEL with patterns on keys.
+    - jbj: rpmdb: fix: resurrect queries with duplicate packages. happy yum ...
     - jbj: rpmdb: remap rpmdbCount -> dbiCount, eliminate dbiIndexSet usage.
     - jbj: rpmdb: fix: rpmmiCount() -> dbiCCount() with early dbcOpen().
     - jbj: rpmmi: eliminate mi->mi_filenum & rpmmiFilenum(), join keysi
